--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,100 @@
+# =====================================================
+# SNKHOUSE BOT - GITIGNORE
+# =====================================================
+
 # Dependencies
-node_modules
+node_modules/
 .pnp
 .pnp.js
 
 # Testing
-coverage
-
-# Next.js
-.next/
-out/
-build/
-dist/
+coverage/
+.nyc_output/
+*.lcov
 
 # Production
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+build/
+dist/
+.next/
+out/
 
-# Env files
+# Environment Variables (CRÍTICO - NUNCA COMMITAR)
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env*.local
+*.env
 
-# Vercel
-.vercel
+# Secrets e Credentials (CRÍTICO - NUNCA COMMITAR)
+*.pem
+*.key
+*.p12
+*.pfx
+*-key.json
+secrets.json
+credentials.json
 
-# Turbo
-.turbo
+# API Keys em qualquer formato
+**/config/secrets.*
+**/config/credentials.*
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # OS
 .DS_Store
 Thumbs.db
-
-# IDE
-.vscode
-.idea
 *.swp
 *.swo
 *~
+
+# IDEs
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+*.code-workspace
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+# Supabase
+.supabase/
+supabase/.branches/
+supabase/.temp/
+
+# Vercel
+.vercel/
+.vercel
+
+# Turbo
+.turbo/
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+
+# Local database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Backup files
+*.backup
+*.bak
+backup/
+
+# Documentation com secrets (se necessário)
+docs/*-secrets.md
+docs/KEYS.md
