--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "build": "turbo run build",
     "test": "turbo run test",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "check:secrets": "tsx scripts/check-secrets.ts"
   },
   "devDependencies": {
+    "prettier": "^3.1.1",
+    "tsx": "^4.20.6",
     "turbo": "^1.11.0",
-    "typescript": "^5.3.3",
-    "prettier": "^3.1.1"
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0",
