--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "test": "turbo run test",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check:secrets": "tsx scripts/check-secrets.ts"
+    "check:secrets": "tsx scripts/check-secrets.ts",
+    "test:openai": "tsx scripts/test-openai-key.ts",
+    "test:claude": "tsx scripts/test-claude-key.ts",
+    "test:tools": "tsx scripts/test-tools-only.ts",
+    "test:widget-mock": "tsx scripts/test-widget-mock.ts",
+    "test:widget-prod": "tsx scripts/test-widget-production.ts"
   },
   "devDependencies": {
+    "playwright": "^1.56.0",
     "prettier": "^3.1.1",
     "tsx": "^4.20.6",
     "turbo": "^1.11.0",
