--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@snkhouse/ai-agent": "workspace:*",
+    "@snkhouse/analytics": "workspace:*",
+    "@snkhouse/database": "workspace:*",
+    "@snkhouse/integrations": "workspace:*",
     "@supabase/supabase-js": "^2.39.0",
+    "dotenv": "^16.4.5",
     "next": "14.2.33",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
