fix: add missing dependencies to resolve build errors
- Add @snkhouse/analytics to ai-agent package.json
- Import getWooCommerceClient in integrations/woocommerce/index.ts

Resolves module not found errors that prevented widget from building
and running properly.

--- a/packages/ai-agent/package.json
+++ b/packages/ai-agent/package.json
@@ -9,6 +9,7 @@
     "test:tools": "tsx src/test-with-tools.ts"
   },
   "dependencies": {
+    "@snkhouse/analytics": "workspace:*",
     "@snkhouse/integrations": "workspace:*",
     "openai": "^4.67.3",
     "@anthropic-ai/sdk": "^0.65.0",
