--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,5 @@
   "buildCommand": "pnpm -w run build:widget",
   "outputDirectory": "apps/widget/.next",
   "installCommand": "pnpm install --frozen-lockfile",
-  "framework": null
+  "framework": "nextjs"
 }
