fix(vercel): configure monorepo build from apps/widget root directory
- Set buildCommand to cd to repo root before building
- Set installCommand to cd to repo root before installing
- This works with Root Directory set to apps/widget in Dashboard
- Vercel will find .next output at correct relative path

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "pnpm -w run build:widget",
-  "outputDirectory": "apps/widget/.next",
-  "installCommand": "pnpm install --frozen-lockfile",
-  "framework": "nextjs"
+  "buildCommand": "cd ../.. && pnpm -w run build:widget",
+  "installCommand": "cd ../.. && pnpm install --frozen-lockfile"
 }
