fix: update .vercelignore to keep required packages for widget build
Previous .vercelignore was too aggressive and removed packages/ai-agent
which is required by the widget. Now only ignoring:
- Other apps (whatsapp-service, admin)
- Documentation (docs/, wordpress-plugin/)
- Scripts
- Test files

This allows widget to access all required packages during Vercel build.

--- a/.vercelignore
+++ b/.vercelignore
@@ -2,17 +2,7 @@
 apps/whatsapp-service
 apps/admin
 
-# Ignorar packages que não são necessários para o widget
-packages/agent-builder
-packages/ai-agent
-
-# Ignorar arquivos de desenvolvimento
-**/.next
-**/node_modules
-**/.env.local
-**/.env*.local
-
-# Ignorar documentação
+# Ignorar documentação e scripts (não afetam o build)
 docs/
 scripts/
 wordpress-plugin/
